Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.3.1
-
None
-
Linux, openSuse 13.1
Description
When using geoSource = QGeoPositionInfoSource::createDefaultSource(0);
my Linux box creates a "geoclue" object.
This however shows an error message on the terminal:
QGeoclueMaster error creating GeoclueMasterClient.
Geoclue error: The name org.freedesktop.Geoclue.Master was not provided by any .service files
The bug here is, even tough there is some initialisation error, QGeoPositionInfoSource::error() still returns NoError
Quickly checking the code, I see that although
QGeoPositionInfoSourceGeoclueMaster::configurePositionSource()
returns a bool false in this case, the returned bool is never used and QGeoPositionInfoSourceGeoclueMaster::error() has a hardcoded return value of always NoError.